<resources>
    <string name="app_name">KotlinFinalSubmission</string>
    <string name="favorites">Favorites</string>
    <string name="teams">Teams</string>
    <string name="matches">Matches</string>
    <string name="vs">VS</string>
    <string name="budum">Budumm</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfielder</string>
    <string name="forward">Forward</string>
    <string name="intent_type_calendar">vnd.android.cursor.item/event</string>
    <string name="substitutes">Substitutes</string>
    <string name="search">Search</string>
    <string name="w">Weight (Kg)</string>
    <string name="position">Position</string>
    <string name="height_m">Height (m)</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <string-array name="id_league">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </string-array>
</resources>
