<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ProgressBar
            android:id="@+id/progress_bar_detail_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <ImageView 
            android:id="@+id/imgPlayerDetail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"/>
    
    <TextView
            android:id="@+id/w"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/w"
            app:layout_constraintTop_toBottomOf="@id/imgPlayerDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toLeftOf="@id/h"/>

    <TextView
            android:id="@+id/tvWeight"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text = "65.76"
            app:layout_constraintTop_toBottomOf="@id/w"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvHeight"/>

    <TextView
            android:gravity="center"
            android:id="@+id/h"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textAlignment="center"
            android:text="@string/height_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPlayerDetail"
            app:layout_constraintLeft_toRightOf="@id/w"
            />

    <TextView
            android:gravity="center"
            android:id="@+id/tvHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:text = "1.68"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/h"
            app:layout_constraintLeft_toRightOf="@id/tvWeight"/>

    <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/tvPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text = "@string/position"
            app:layout_constraintTop_toBottomOf="@id/tvWeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvPosition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:gravity="center"
                android:id="@+id/tvPlayerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

    </ScrollView>
    


</android.support.constraint.ConstraintLayout>