<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_margin="4dp">

            <ProgressBar
                    android:id="@+id/progress_bar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/tvDateEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text = "Sun,11 Nov 2018"
                    android:gravity="center"
            />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:baselineAligned="false"
                    android:layout_margin="4dp">

                <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="start">

                    <ImageView
                            android:id="@+id/imgHomeTeam"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/budum"
                            android:layout_centerHorizontal="true"/>
                    <TextView
                            android:id="@+id/tvStrHomeTeam"
                            tools:text = "AC MILAN"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/imgHomeTeam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </RelativeLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tvHomeScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2"
                            android:textSize="32sp"
                            android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vs"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tvAwayScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2"
                            android:textSize="32sp"
                            android:textStyle="bold"/>

                </LinearLayout>

                <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="start">

                    <ImageView
                            android:id="@+id/imgAwayTeam"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/budum"
                            android:layout_centerHorizontal="true"/>
                    <TextView
                            android:id="@+id/tvStrAwayTeam"
                            tools:text = "AC MILAN"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/imgAwayTeam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </RelativeLayout>
            </LinearLayout>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#FF0000FF" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                <TextView
                        android:id="@+id/tvGoalHomeDetails"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/goals"
                        android:textAlignment="center"/>
                <TextView
                        android:id="@+id/tvGoalAwayDetails"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                <TextView
                        android:id="@+id/tvHomeShot"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "@string/budum"
                        android:textAlignment="center"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shots"
                        android:textAlignment="center"/>
                <TextView
                        android:id="@+id/tvAwayShot"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "@string/budum"
                        android:textAlignment="center"/>

            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#FF0000FF" />

            <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lineups"
                    android:padding="4dp"
                    android:gravity="center"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                <TextView
                        android:id="@+id/tvHomeGoalKeeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "Budum"
                        android:textAlignment="center"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/goal_keeper"
                        android:textAlignment="center"/>
                <TextView
                        android:id="@+id/tvAwayGoalKeeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                <TextView
                        android:id="@+id/tvHomeDefense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/defense"
                        android:textAlignment="center"/>
                <TextView
                        android:id="@+id/tvAwayDefense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                <TextView
                        android:id="@+id/tvHomeMidfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/midfield"
                        android:textAlignment="center"/>
                <TextView
                        android:id="@+id/tvAwayMidfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                <TextView
                        android:id="@+id/tvHomeForward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/forward"
                        android:textAlignment="center"/>
                <TextView
                        android:id="@+id/tvAwayForward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                <TextView
                        android:id="@+id/tvHomeSubstitutes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/substitutes"
                        android:textAlignment="center"/>
                <TextView
                        android:id="@+id/tvAwaySubstitutes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text = "budum"
                        android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>